Namespaces tree went out of bounds with large class names; this has been fixed

--- a/data/themes/default/css/default.css
+++ b/data/themes/default/css/default.css
@@ -106,6 +106,8 @@ div.section
   border: 1px solid silver;
   -moz-border-radius: 6px;
   border-radius: 6px;
+  width: 218px;
+  word-wrap: break-word;
 }
 
 div.section h1
